--- a/game/css/index.css
+++ b/game/css/index.css
@@ -8,28 +8,43 @@ body{
 
 
 h1{
-    margin-top: 5%;
+    margin-top:3%;
     text-align: center;
-    font-size: 80px;
+    font-size: 60px;
 }
 
 h2{
     text-align: center;
-    font-size: 40px;
+    font-size: 50px;
+    padding:80px ;
+    cursor: pointer;
+    box-shadow: 0px 0px 35px black;
+    width: 350px;
+    height: 70px;
+    margin-right: auto;
+    margin-left: auto;
+    border-radius: 50%;
+}
+
+
+h2:hover{
+    color:rgb(80, 79, 79);
+    text-decoration: underline;
 }
 
 p{
     text-align: center;
-    font-size: 50px;
+    font-size: 35px;
+    margin-bottom:5%;
 }
 
 a{
-    margin:15px;
+
     text-decoration: none;
     display: block;
     text-align: center;
     color: rgb(70, 9, 85);
-    font-size:35px;
+    font-size:30px;
 }
 
 a:hover{
@@ -37,20 +52,58 @@ a:hover{
     text-decoration: underline;
 }
 
-div{
-    margin-top:7%;
+#flex{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    width:80%;
 }
 
+div{
+  width: 250px;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+}
+
+div h3{
+    text-align: center;
+    cursor: pointer;
+    font-size:30px;
+    display: block;
+}
+
+
+
+div p{
+    padding: 10px;
+    font-size:22px;
+}
+
+.bloco{
+    display: none;
+    margin-top:-20px;
+}
 
 
 @media screen and (min-width:250px) and (max-width:399px) {
    
     body{background-image: none;}
-    h1{font-size: 35px;margin-top: 40%;}
-    h2{font-size: 30px;}
-    a{font-size: 25px; margin:25px;}
-    p{font-size: 25px;}
-
+    h1{font-size: 30px;}
+    
+    h2{
+        font-size: 16px;
+        width:115px;
+        padding:40px;
+        height:15px;
+        border-radius:none;
+    }
+   
+    a{font-size: 16px; margin:25px;}
+    p{font-size: 18px;}
+    div p{font-size:16px;}
+    div h3{font-size: 18px;}
+    .bloco{  width:180px ;}
 }
 
 
@@ -61,19 +114,31 @@ div{
     background-image:url(../imagens/ir.jpg);
 }
 
-    h1{font-size: 60px;margin-top: 20%;}
-    h2{font-size: 40px;}
-    a{font-size: 35px; margin:20px;}
-    p{font-size: 30px;}
+    h1{font-size: 50px;}
+    h2{
+        font-size: 30px;
+        width:190px;
+        height:30px;
+        padding:50px;
+    }
+    a{font-size: 25px; margin:20px;}
+    p{font-size: 25px;}
+    div p{font-size:20px;}
+    div h3{font-size:25px;}
+
+    
 
 }
 
 
 @media screen and (min-width:1400px)  {
    
-    h1{font-size: 90px;}
-    h2{font-size: 50px;}
-    a{font-size: 40px; margin:25px;}
-    p{font-size: 60px;}
+    h1{font-size: 70px;}
+    h2{font-size: 55px;}
+    a{font-size: 35px; margin:25px;}
+    p{font-size: 45px;}
+    div p{font-size:30px;}
+    div h3{font-size:35px;}
+    div{width: 320px;}
 
 }
