--- a/game/css/easy.css
+++ b/game/css/easy.css
@@ -1,6 +1,6 @@
 body {
   background-color: black;
-  background-image: url(../imagens/num.jpg);
+  background-image: url(../imagens/nume.jpg);
   background-repeat:space;
   }
   
@@ -17,7 +17,7 @@ body {
 
 
 #container h2{
-  margin-left:20%;
+  margin-left:15%;
   font-size: 25px;
 }
 
@@ -86,7 +86,7 @@ body {
     }
   
     #container h2{
-      margin-left:15%;
+      margin-left:13%;
       font-size: 14px;
   
     }
@@ -103,7 +103,7 @@ body {
 @media screen and (min-width:350px) and (max-width:599px){
   
 
-  body{  background-image: url(../imagens/numr.jpg);}
+  body{  background-image: url(../imagens/numer.jpg);}
 
 
   #impressao{
@@ -122,7 +122,7 @@ body {
     }
   
     #container h2{
-      margin-left:20%;
+      margin-left:17%;
       font-size: 18px;
   
     }
@@ -140,7 +140,7 @@ body {
 @media screen and (min-width:600px) and (max-width:785px){
   
 body{ 
-  background-image:url(../imagens/numr.jpg);
+  background-image:url(../imagens/numer.jpg);
 }
 
 #impressao{
@@ -156,7 +156,7 @@ body{
   }
 
   #container h2{
-    margin-left:17%;
+    margin-left:13%;
     font-size: 25px;
 
   }
@@ -189,8 +189,8 @@ body{
     }
   
     #container h2{
-      margin-left:14%;
-      font-size: 30px;
+      margin-left:12%;
+      font-size: 28px;
     }
 
     #container{
@@ -201,5 +201,5 @@ body{
 }
 
 @media screen and (min-width:1500px) {
-  body{  background-image:url(../imagens/numrr.jpg);}
+  body{  background-image:url(../imagens/numerr.jpg);}
 }
