--- a/game/css/hard.css
+++ b/game/css/hard.css
@@ -14,6 +14,8 @@ body {
     margin-right: auto;
     margin-top:5%;
     border-radius: 25px;
+    background-size: cover;
+    background-position: center center;
   }
   
   
