--- a/game/css/medium.css
+++ b/game/css/medium.css
@@ -14,6 +14,9 @@ background-repeat:space;
   margin-right: auto;
   margin-top:5%;
   border-radius: 25px;
+  background-size: cover;
+  background-position: center center;
+
 }
 
 
