--- a/game/css/index.css
+++ b/game/css/index.css
@@ -87,7 +87,7 @@ div p{
 }
 
 
-@media screen and (min-width:250px) and (max-width:399px) {
+@media screen and (min-width:250px) and (max-width:349px) {
    
     body{background-image: none;}
     h1{font-size: 26px;}
@@ -109,9 +109,9 @@ div p{
 
 
 
-@media screen and (min-width:400px) and (max-width:785px) {
+@media screen and (min-width:350px) and (max-width:785px) {
     
-    h1{font-size: 50px;}
+    h1{font-size: 50px};
     h2{
         font-size:23px;
         width:205px;
