--- a/game/css/easy.css
+++ b/game/css/easy.css
@@ -57,14 +57,20 @@ body {
 }
 
 #impressaoErro{
-  margin:7px
+  margin:7px;
+  font-size: 25px;
+  
+}
+
+#impressao{
+  font-size: 30px;
 }
 
 
 @media screen and (min-width:250px) and (max-width:349px) {
 
-  #impressaoErro{
-    font-size: 14px;
+  #impressaoErro,#impressao{
+    font-size: 16px;
   }
 
   body{
@@ -109,7 +115,7 @@ body {
 
 
   #impressao{
-    font-size: 18px;
+    font-size: 25px;
   }
   
     #entrada{
@@ -146,7 +152,7 @@ body{
 }
 
 #impressao{
-  font-size: 20px;
+  font-size: 28px;
 }
 
   #entrada{
@@ -183,7 +189,7 @@ body{
 
 @media screen and (min-width:1400px) {
   #impressao{
-    font-size: 30px;
+    font-size: 35px;
   }
   
     #entrada{
