--- a/game/css/hard.css
+++ b/game/css/hard.css
@@ -56,9 +56,14 @@ body {
     color: white;
   
   }
-  
   #impressaoErro,#impressaoTempo{
-    margin:7px
+    margin:7px;
+    font-size: 25px;
+    
+  }
+  
+  #impressao{
+    font-size: 30px;
   }
 
   #timer{
@@ -75,17 +80,14 @@ body {
 
   @media screen and (min-width:250px) and (max-width:349px) {
 
-    #impressaoErro,#impressaoTempo{
-      font-size: 14px;
+    #impressaoErro,#impressaoTempo,#impressao{
+      font-size: 16px;
     }
 
     body{
       background-image: none;
     }
   
-    #impressao{
-      font-size: 14px;
-    }
     
       #entrada{
         font-size: 14px;
@@ -120,7 +122,7 @@ body {
     body{background-image: url(../imagens/numehr.jpg);} 
   
     #impressao{
-      font-size: 18px;
+      font-size: 25px;
     }
     
       #entrada{
@@ -156,7 +158,7 @@ body {
 
 
   #impressao{
-    font-size: 20px;
+    font-size: 28px;
   }
   
     #entrada{
@@ -192,7 +194,7 @@ body {
 
   @media screen and (min-width:1400px) {
     #impressao{
-      font-size: 28px;
+      font-size: 35px;
     }
     
       #entrada{
